--- a/css/index.css
+++ b/css/index.css
@@ -20,13 +20,13 @@
     background-size: cover;
     opacity: 0.6;
 }#contact-center-form-2 .bg {
-	background-image: url('../images/bg-scene-1.jpg');
+	background-image: url('../images/bg-c.jpg');
 	background-size: cover;
 	-webkit-background-size: cover;
 	background-repeat: no-repeat;
 	-webkit-background-repeat: no-repeat;
 	background-position: bottom center;
-	opacity: 1;
+	opacity: 0.25;
 }#popup-center-countdown .modal-content {
     background: radial-gradient(circle, #ffffff 30%, #eeeeee 70%);
 }
@@ -42,4 +42,8 @@
 }
 #footer-text-logo-btn {
     background: #768190;
+}
+
+.transmark{
+    background-color: rgba(255,0,0,0.1);
 }
