content style icons

--- a/css/index.css
+++ b/css/index.css
@@ -47,3 +47,11 @@
 .transmark{
     background-color: rgba(255,0,0,0.1);
 }
+
+/*#text-4col-center .bg {*/
+/*    background-image: url('../images/bg-contact.jpg');*/
+/*    background-repeat: no-repeat;*/
+/*    background-position: center;*/
+/*    background-size: cover;*/
+/*    opacity: 0.1;*/
+/*}*/
